[project]
name = "prisma-control-api"
version = "APP_VERSION"
description = "PRISMA Experiment Control API for motor and brake control"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { email = "MAINTAINER_EMAIL" }
]

dependencies = [
  "fastapi>=0.95.0",
  "uvicorn>=0.22.0",
  "pydantic>=1.10.0",
  "pyinstaller>=6.11.1"
]

